force-app/main/default/objects/MicrocycleDay__c/MicrocycleDay__c.object-meta.xml
<CustomObject>
    <description>Jour du microcycle (MD+1, MD-3, etc.) avec objectifs tactiques et charge cible.</description>
    <label>Microcycle Day</label>
    <nameField>
        <label>Day Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microcycle Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>