force-app/main/default/objects/MicrocycleDay__c/fields/DayDate__c.field-meta.xml
<CustomField>
    <fullName>DayDate__c</fullName>
    <label>Day Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>