force-app/main/default/objects/MicrocycleDay__c/fields/Microcycle__c.field-meta.xml
<CustomField>
    <fullName>Microcycle__c</fullName>
    <label>Microcycle</label>
    <referenceTo>Microcycle__c</referenceTo>
    <relationshipLabel>Microcycle Days</relationshipLabel>
    <relationshipName>MicrocycleDays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>