force-app/main/default/objects/MicrocycleDay__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Position relative au match de reference (MD).</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD_Plus_2</fullName>
                <label>MD+2</label>
            </value>
            <value>
                <fullName>MD_Plus_1</fullName>
                <label>MD+1</label>
            </value>
            <value>
                <fullName>MD_Minus_3</fullName>
                <label>MD-3</label>
            </value>
            <value>
                <fullName>MD_Minus_2</fullName>
                <label>MD-2</label>
            </value>
            <value>
                <fullName>MD_Minus_1</fullName>
                <label>MD-1</label>
            </value>
            <value>
                <fullName>MD_Matchday</fullName>
                <label>MD</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>