force-app/main/default/objects/MicrocycleDay__c/fields/PhysicalFocus__c.field-meta.xml
<CustomField>
    <fullName>PhysicalFocus__c</fullName>
    <label>Physical Focus</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>