force-app/main/default/objects/MicrocycleDay__c/fields/PlanningEvent__c.field-meta.xml
<CustomField>
    <fullName>PlanningEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lien optionnel vers une seance de planning terrain principale.</description>
    <label>Planning Event</label>
    <referenceTo>PlanningEvent__c</referenceTo>
    <relationshipLabel>Microcycle Days</relationshipLabel>
    <relationshipName>MicrocycleDays</relationshipName>
    <type>Lookup</type>
</CustomField>