force-app/main/default/objects/MicrocycleDay__c/fields/SupportActivities__c.field-meta.xml
<CustomField>
    <fullName>SupportActivities__c</fullName>
    <description>Video, physio, staff meetings, travel, etc.</description>
    <label>Support Activities</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>