force-app/main/default/objects/MicrocycleDay__c/fields/TacticalFocus__c.field-meta.xml
<CustomField>
    <fullName>TacticalFocus__c</fullName>
    <label>Tactical Focus</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>