force-app/main/default/objects/MicrocycleDay__c/fields/TargetIntensity__c.field-meta.xml
<CustomField>
    <fullName>TargetIntensity__c</fullName>
    <label>Target Intensity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>